# test_cmake

./: .gitignore  test_hook.txt
tests/GNUInstallDirs/: CMakeLists.txt  GNUInstallDirs.cmake  README.md
tests/PUBLIC_HEADER/: CMakeLists.txt  README.md
tests/PUBLIC_HEADER/app/: CMakeLists.txt  main.cpp
tests/PUBLIC_HEADER/src/: CMakeLists.txt  mylib.cpp  mylib.h
tests/include_directories/: CMakeLists.txt  README.md  main.cpp
tests/include_directories/subdir/: CMakeLists.txt
tests/target_include_or_link/: CMakeLists.txt  README.md  mylib.cpp
